# claude-team-hud

./: index.html  package-lock.json  package.json  vite.config.ts
hooks/: hud-permission.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  parser.rs  watcher.rs
src/components/: AgentRoster.svelte  MessageInput.svelte  MessageLog.svelte  PaneViewer.svelte  PermissionDialog.svelte  SessionInfo.svelte  SidePanel.svelte  TaskList.svelte  TokenDashboard.svelte
src/lib/constants/: roles.ts
src/lib/engine/: AssetLoader.ts  BuildingScene.ts  Character.ts  CharacterFactory.ts  EnvironmentOverlays.ts  OfficeScene.ts  Pathfinder.ts  SpeechBubble.ts  StatusIndicator.ts  TilemapLayer.ts  ToolIcon.ts  WallMonitor.ts
src/lib/ipc/: bridge.ts  types.ts
src/lib/state/: agents.ts  environment.ts  messages.ts  metrics.ts  multiTeam.ts  office.ts  selection.ts  tasks.ts  team.ts
